--- a/scss/style.scss
+++ b/scss/style.scss
@@ -196,6 +196,74 @@ img.img {
 }
 
 .banner {
+
+    /* Loading overlay */
+    .loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+    }
+
+    .spinner {
+        border: 16px solid #f3f3f3;
+        border-top: 16px solid #3498db;
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    /* Slider container */
+    .slider {
+        position: relative;
+        width: 100%;
+        height: 600px;
+        overflow: hidden;
+    }
+
+    /* Each slide */
+    .slider__image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+    }
+
+    /* Show the active slide */
+    .slider__image.active {
+        opacity: 1;
+        animation: zoomOut 4s ease-in-out;
+    }
+
+    /* Zoom out animation */
+    @keyframes zoomOut {
+        0% {
+            transform: scale(1.2);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
     img {
         width: 100%;
         /* border-radius: 20px; */
@@ -213,7 +281,6 @@ img.img {
             top: 0;
             bottom: 0;
             background: linear-gradient(90deg, rgba(0, 0, 0, .4), transparent 70%);
-            border-radius: 20px;
         }
 
     }
@@ -347,7 +414,8 @@ a {
 }
 
 .achivements {
-    background-image: url(../images/slider/slider.jpg);
+    // background-image: url(../images/banner/hd-1.jpg);
+    background-image: url(../images/trail/title-bg.jpg);
     background-size: cover;
     position: relative;
 
@@ -358,13 +426,13 @@ a {
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(0, 128, 0, 0.6); // Nice green with 30% opacity
-        z-index: 1; // Ensure it is behind the content
+        background-color: rgb(0 0 0 / 60%);
+        z-index: 1;
     }
 
     >* {
         position: relative;
-        z-index: 2; // Ensure direct children are above the pseudo-element
+        z-index: 2;
     }
 
     img {
@@ -974,6 +1042,7 @@ button.owl-dot.active {
         background-color: $secondary-color;
         color: $white-color;
         border-radius: 5px;
+
         .support-message {
             padding: 50px 30px 50px 50px;
             font-family: "Roboto", serif;
@@ -1298,12 +1367,13 @@ button.owl-dot.active {
     .nav-item.dropdown:hover .dropdown-icon {
         transform: rotate(180deg);
         transition: transform 0.3s ease-in-out;
-      }
-      
-      /* Ensure the arrow transitions smoothly */
-      .navbar .dropdown-icon {
+    }
+
+    /* Ensure the arrow transitions smoothly */
+    .navbar .dropdown-icon {
         transition: transform 0.3s ease-in-out;
-      }
+    }
+
     .navbar .dropdown:hover .dropdown-menu {
         display: block;
         margin-top: 0;
